Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                 <div class="relative w-full h-64 overflow-hidden bg-[#1A1A1A]">
                                     <img alt="Nayura Wellness Ayurveda Store"
                                         class="w-full h-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:opacity-100 transition-all duration-500"
-                                        src="https://i.ibb.co/1fYW5gFx/nayura-landing.png" />
+                                        src="https://image2url.com/r2/default/images/1771857586754-cfe05482-3f65-4f55-af95-24464a25a3fe.png" />
                                     <div
                                         class="absolute bottom-0 left-0 w-full p-2 bg-gradient-to-t from-black to-transparent">
                                         <div
