--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                                 <div class="relative w-full h-64 overflow-hidden bg-[#1A1A1A]">
                                     <img alt="Nayura Wellness Ayurveda Store"
                                         class="w-full h-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:opacity-100 transition-all duration-500"
-                                        src="https://i.ibb.co/Txxgcbzp/Screenshot-2026-02-23-183609.png" />
+                                        src="https://image2url.com/r2/default/images/1771858105471-6b7ccd95-2838-42ee-af0d-3b97c7d14dc3.png" />
                                     <div
                                         class="absolute bottom-0 left-0 w-full p-2 bg-gradient-to-t from-black to-transparent">
                                         <div
