--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                                 <div class="relative w-full h-64 overflow-hidden bg-[#1A1A1A]">
                                     <img alt="Nayura Wellness Ayurveda Store"
                                         class="w-full h-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:opacity-100 transition-all duration-500"
-                                        src="https://i.ibb.co/Tq7GjyW2/Screenshot-2026-02-23-185133.png" />
+                                        src="https://image2url.com/r2/default/images/1771858277372-2a02b5bb-4a70-4cd8-ade6-63256edf9696.png" />
                                     <div
                                         class="absolute bottom-0 left-0 w-full p-2 bg-gradient-to-t from-black to-transparent">
                                         <div
