--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                 <div class="relative w-full h-64 overflow-hidden bg-[#1A1A1A]">
                                     <img alt="Deva Manthra"
                                         class="w-full h-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:opacity-100 transition-all duration-500"
-                                        src="https://i.ibb.co/XnDt12R/Screenshot-2026-02-23-190040.png" />
+                                        src="https://image2url.com/r2/default/images/1771858368872-6453b253-afaf-454d-9e9a-d9f602c971db.png" />
                                     <div
                                         class="absolute bottom-0 left-0 w-full p-2 bg-gradient-to-t from-black to-transparent">
                                         <div
