Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                                 <div class="relative w-full h-64 overflow-hidden bg-[#1A1A1A]">
                                     <img alt="Deva Manthra"
                                         class="w-full h-full object-cover grayscale opacity-80 group-hover:grayscale-0 group-hover:opacity-100 transition-all duration-500"
-                                        src="https://i.ibb.co/MyCSNVch/Screenshot-2026-02-23-190418.png" />
+                                        src="https://image2url.com/r2/default/images/1771858579496-26641071-920e-4708-99a3-158b30ebfda5.png" />
                                     <div
                                         class="absolute bottom-0 left-0 w-full p-2 bg-gradient-to-t from-black to-transparent">
                                         <div
